# basic-streamlit

./: .dockerignore  .env.example  .gitignore  Dockerfile  build-and-run.sh  pyproject.toml
app/: data_fetcher.py  fetch_azure_blob.py  fetch_data.py  main.py
tests/: test_data_fetcher.py  test_environment_is_set.py  test_fetch_azure_blob.py  test_fetch_data.py
